--- a/app/src/main/res/layout/activity_sbottle.xml
+++ b/app/src/main/res/layout/activity_sbottle.xml
@@ -9,7 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.user.doitorno.Sbottle"
-    android:background="?attr/colorControlHighlight">
+    android:background="@drawable/whitewood"
+                >
 
     <Button
         android:text="SPIN"
